force-app/main/default/objects/Persona_Aggregation__c.object
<CustomObject>
    <fields>
        <fullName>PAG_Composite_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique key (MoID|Type|SubType|Context) to enforce MECE.</description>
        <externalId>true</externalId>
        <label>Composite Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PAG_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Persona Aggregations2</relationshipLabel>
        <relationshipName>Persona_Aggregations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAG_Context__c</fullName>
        <label>Context</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAG_MoID__c</fullName>
        <externalId>true</externalId>
        <label>MoID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAG_State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_SubType__c</fullName>
        <label>Sub Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Persona Aggregation</label>
    <nameField>
        <displayFormat>PAG-{000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persona Aggregations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>